# crc_cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  crc.cpp  maketest.sh  test.cpp
.github/workflows/: build-test-cpp17.yml  build-test-cpp20.yml  build-test.yml  build_cmake.yml  clang-tidy.yml  codeql-analysis.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/: crc_cpp.h
include/impl/: reverse_bits.h  table_gen.h
test/: CMakeLists.txt  catch_main.cpp  test.cpp
